# rust_sql

./: .env  Cargo.toml
src/: db.rs  main.rs
src/models/: mod.rs
src/utils/: db_process.rs  mod.rs
