[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
deadpool = "0.12.1"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version="0.7.4", features = ["postgres", "runtime-tokio-rustls","chrono"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"

